<resources>
    <string name="app_name">WeatherApp</string>
    <string name="btn_ok">ok</string>
    <string name="wrong">Wrong cords, enter new:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_location">Please, wait.\nWe search your location</string>
    <string name="error_network">Error! On your internet\nand try again.</string>
    <string name="retry">retry</string>
    <string name="title_network_error">Network error</string>
    <string name="title_progress_dialog">Progress...</string>
    <string name="search">search</string>
    <string name="temperature_today">Temperature today:</string>
    <string name="min_temperature">min temperature =</string>
    <string name="celciy">°C</string>
    <string name="max_temperature">max temperature =</string>
    <string name="pressure">pressure =</string>
    <string name="mbar">mbar</string>
    <string name="humidty">humidity =</string>
    <string name="description">description:</string>
    <string name="wind_city_speed">WindCity speed =</string>
    <string name="wind_city_null">WindCity speed = 0.0km/h</string>
    <string name="km_h">km/h</string>
    <string name="location_erro">Location Error</string>
    <string name="enter_coords">Enter your coords</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="history">history</string>
    <string name="add">add</string>
    <string name="Date">Date =</string>
    <string name="wind_speed">Wind Speed =</string>
    <string name="clear_selection">clear_selection</string>
    <string name="delete">delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">map</string>
</resources>
