<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group
    android:id="@+id/group_search">


    <item
        android:id="@+id/search_item_menu"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView">
    </item>
</group>
<group
    android:id="@+id/group_history">


    <item
        android:id="@+id/my_history"
        android:title="@string/history"
        android:icon="@drawable/history"
        app:showAsAction="always" />
</group>

    <group
        android:id="@+id/group_add">


        <item
            android:id="@+id/add_to_history"
            android:title="@string/add"
            app:showAsAction="always"
            android:icon="@drawable/plus_info"
            />
    </group>


</menu>